# Tydline-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: logistics.py  memory.py
app/api/: deps.py
app/api/v1/: agent.py  dashboard.py  email.py  internal.py  onboarding.py  router.py  shipments.py  whatsapp.py
app/core/: config.py
app/db/: session.py
app/integrations/: shipsgo.py
app/models/: orm.py
app/observability/: langfuse.py
app/schemas/: shipment.py
app/services/: ai.py  email_ingest.py  intelligence.py  monitor.py  notification.py  tracking.py
app/utils/: retry.py
app/workers/: tracker.py  tracker_worker.py
emails/: shipment-added.html
migrations/: env.py
migrations/versions/: 7e1509a91c5d_initial_schema.py  a3b7c9d1e2f4_add_index_on_users_phone.py  f5a6b7c8d9e0_seed_test_user_email.py  g6b7c8d9e0f1_add_user_whatsapp_phones.py  h7c8d9e0f1a2_nullable_container_number.py  i8d9e0f1a2b3_add_user_authorized_emails.py  l1a2b3c4d5e6_add_vessel_origin_destination.py  n3c4d5e6f7a8_add_shipsgo_shipment_id_to_shipments.py
scripts/: run_tracker_once.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_schemas.py
